removed gallery and fixed nav

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -19,15 +19,12 @@
     <center><img class="logo" src="../img/carrie-smith-logo.png" alt="Carrie Smith"></center>
     <div class="row">
 
-      <div class="col-1-3">
-        <img class="headshot" src="../img/as-hs-15.png" alt="Headshot">
-      </div>
+    <center><img class="headshot" src="../img/as-hs-15.png" alt="Headshot"></center>
 
-      <div class="col-2-3">
-        <h2>About Me</h2>
+    <h1>About Me</h1>
         <hr color="dfd1c3"></hr>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
+
 
       <h1>This is a test</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
