added header image

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -6,30 +6,20 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i|Raleway:200,300,400,600,700,800" rel="stylesheet">
-    <title>About 2</title>
+    <title>About</title>
   </head>
   <body>
 
-    <!--
+    <div id="header-bg">
+      <center><img class="logo" src="../img/carrie-smith-logo_white.png" alt="Carrie Smith"></center>
+    </div>
 
-    <body class="page-about">
+    <center><ul class="nav-bar">
+      <li class="nav"><a href="../home/index.html">Home</a></li>
+      <li class="nav"><a href="../about-me/index.html">About</a></li>
+      <li class="nav"><a href="../portfolio/index.html">Portfolio</a></li>
+    </ul></center>
 
-      <center><ul class="nav-bar">
-        <li class="nav"><a href="../home/index.html">Home</a></li>
-        <li class="nav"><a href="../about-me/index.html">About</a></li>
-        <li class="nav"><a href="../portfolio/index.html">Portfolio</a></li>
-      </ul></center>
-
-      <center><img class="logo" src="../img/carrie-smith-logo.png" alt="Carrie Smith"></center>
-      <div class="row">
-
-      <center><img class="headshot" src="../img/as-hs-15.png" alt="Headshot"></center>
-
-      <h1>About Me</h1>
-          <hr color="dfd1c3"></hr>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-        -->
 
 
     <div class="wrapper">
@@ -38,8 +28,10 @@
         <div class="box one">
           <center><img class="headshot" src="../img/as-hs-15.png"></center>
         </div>
+
         <div class="box two">
           <h1>About Me</h1>
+          <hr color="dfd1c3"></hr>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
 
