worked on portfolio page

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i|Raleway:200,300,400,600,700,800" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="../js/main.js" charset="utf-8"></script>
     <title>Portfolio</title>
   </head>
   <body class="page-portfolio">
@@ -19,6 +21,32 @@
       <li class="nav"><a href="../about-me/index.html">About</a></li>
       <li class="nav"><a href="../portfolio/index.html">Portfolio</a></li>
     </ul></center>
+
+    <div class="wrapper">
+      <div class="flex-container">
+
+          <div id="box1" class="box img1">
+            <button id="btn1">Study Abroad</button>
+            <img id="fullImage1" src="../img/AS-home_feature-area_study-abroad">
+          </div>
+
+          <div class="box img2">
+          </div>
+
+          <div class="box img3">
+          </div>
+
+          <div class="box img4">
+          </div>
+
+          <div class="box img5">
+          </div>
+
+          <div class="box img6">
+          </div>
+
+      </div>
+    </div>
 
   </body>
 </html>
