changed nav to flexbox format & added styling

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -8,17 +8,28 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i|Raleway:200,300,400,600,700,800" rel="stylesheet">
     <title>About</title>
   </head>
+
   <body class="page-about">
 
     <div id="header-bg">
-      <center><img class="logo" src="../img/carrie-smith-logo_white.png" alt="Carrie Smith"></center>
+      <center>
+        <img class="logo" src="../img/carrie-smith-logo_white.png" alt="Carrie Smith">
+      </center>
     </div>
 
-    <center><ul class="nav-bar">
-      <li class="nav"><a href="../home/index.html">Home</a></li>
-      <li class="nav"><a href="../about-me/index.html">About</a></li>
-      <li class="nav"><a href="../portfolio/index.html">Portfolio</a></li>
-    </ul></center>
+    <div class="nav-wrapper">
+      <div class="flex-nav-container">
+
+        <ul class="nav-bar">
+          <li class="nav"><a href="../home/index.html">Home</a></li>
+          <li class="nav"><a href="../about-me/index.html">About</a></li>
+          <li class="nav"><a href="../portfolio/index.html">Portfolio</a></li>
+        </ul>
+
+      </div>
+    </div>
+
+
 
     <div class="wrapper">
       <div class="flex-container">
