--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,11 +16,24 @@
       <center><img class="logo" src="../img/carrie-smith-logo_white.png" alt="Carrie Smith"></center>
     </div>
 
-    <center><ul class="nav-bar">
-      <li class="nav"><a href="../home/index.html">Home</a></li>
-      <li class="nav"><a href="../about-me/index.html">About</a></li>
-      <li class="nav"><a href="../portfolio/index.html">Portfolio</a></li>
-    </ul></center>
+    <div class="nav-wrapper">
+      <div class="flex-nav-container">
+
+        <ul class="nav-bar">
+          <li class="nav"><a href="../home/index.html">Home</a></li>
+          <li class="nav"><a href="../about-me/index.html">About</a></li>
+          <li class="nav"><a href="../portfolio/index.html">Portfolio</a></li>
+        </ul>
+
+      </div>
+    </div>
+
+
+    <div class="title-area">
+        <h1>Portfolio</h1>
+        <hr color="dfd1c3"></hr>
+    </div>
+
 
     <div class="wrapper">
       <div class="flex-container">
