fixed portfolio page

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,29 +36,39 @@
 
 
     <div class="wrapper">
-      <div class="flex-container">
+      <center><div class="flex-container">
 
-          <div id="box1" class="box img1">
-            <button id="btn1">Study Abroad</button>
-            <img id="fullImage1" src="../img/AS-home_feature-area_study-abroad">
+          <div class="box img zoom">
+            <a href="../img/AS-home_feature-area_Rising-Tide.png">
+              <img src="../img/AS-home_feature-area_Rising-Tide_thumb.png"></a>
           </div>
 
-          <div class="box img2">
+          <div id="gal-img" class="box img">
+            <a href="../img/Bill-Nye_slider-image.png">
+              <img src="../img/Bill-Nye_slider-image_thumb.jpg"></a>
           </div>
 
-          <div class="box img3">
+          <div id="gal-img" class="box img">
+            <a href="../img/AS-home_feature-area_study-abroad.png">
+              <img src="../img/AS-home_feature-area_study-abroad_thumb.jpg"></a>
           </div>
 
-          <div class="box img4">
+          <div id="gal-img" class="box img">
+            <a href="../img/Utopia_slider-image.png">
+              <img src="../img/Utopia_slider-image_thumb.jpg"></a>
           </div>
 
-          <div class="box img5">
+          <div id="gal-img" class="box img">
+            <a href="../img/penn-parents-mockup-page.jpg">
+              <img src="../img/penn-parents_mockup_thumb.jpg"></a>
           </div>
 
-          <div class="box img6">
+          <div id="gal-img" class="box img">
+            <a href="../img/UG-Posters_amira.jpg">
+              <img src="../img/UG-Posters_amira_thumb.jpg"></a>
           </div>
 
-      </div>
+      </div></center>
     </div>
 
   </body>
