added hover effects to portfolio page

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -13,7 +13,7 @@
 
     <div id="header-bg">
       <center>
-        <img class="logo" src="../img/carrie-smith-logo_white.png" alt="Carrie Smith">
+        <a href="../home/index.html"><img class="logo" src="../img/carrie-smith-logo_white.png" alt="Carrie Smith"></a>
       </center>
     </div>
 
