--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,7 +13,9 @@
   <body class="page-portfolio">
 
     <div id="header-bg">
-      <center><img class="logo" src="../img/carrie-smith-logo_white.png" alt="Carrie Smith"></center>
+      <center>
+        <a href="../home/index.html"><img class="logo" src="../img/carrie-smith-logo_white.png" alt="Carrie Smith"></a>
+      </center>
     </div>
 
     <div class="nav-wrapper">
@@ -38,32 +40,32 @@
     <div class="wrapper">
       <center><div class="flex-container">
 
-          <div class="box img zoom">
+          <div class="box img">
             <a href="../img/AS-home_feature-area_Rising-Tide.png">
               <img src="../img/AS-home_feature-area_Rising-Tide_thumb.png"></a>
           </div>
 
-          <div id="gal-img" class="box img">
+          <div class="box img">
             <a href="../img/Bill-Nye_slider-image.png">
               <img src="../img/Bill-Nye_slider-image_thumb.jpg"></a>
           </div>
 
-          <div id="gal-img" class="box img">
+          <div class="box img">
             <a href="../img/AS-home_feature-area_study-abroad.png">
               <img src="../img/AS-home_feature-area_study-abroad_thumb.jpg"></a>
           </div>
 
-          <div id="gal-img" class="box img">
+          <div class="box img">
             <a href="../img/Utopia_slider-image.png">
               <img src="../img/Utopia_slider-image_thumb.jpg"></a>
           </div>
 
-          <div id="gal-img" class="box img">
+          <div class="box img">
             <a href="../img/penn-parents-mockup-page.jpg">
               <img src="../img/penn-parents_mockup_thumb.jpg"></a>
           </div>
 
-          <div id="gal-img" class="box img">
+          <div class="box img">
             <a href="../img/UG-Posters_amira.jpg">
               <img src="../img/UG-Posters_amira_thumb.jpg"></a>
           </div>
